<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <import type="edwylugo.woopsicredi.viewmodel.EventViewModel"/>
        <variable name="viewModel" type="EventViewModel"/>
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.EventActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:fitsSystemWindows="true"
            android:id="@+id/appBarLayout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleTextAppearance="@android:color/transparent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:contentDescription="@string/app_name"
                    android:id="@+id/ivEvent"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    tools:srcCompat="@drawable/ic_launcher_foreground"/>

                <androidx.appcompat.widget.Toolbar
                    android:fitsSystemWindows="true"
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:layout_scrollFlags="scroll|enterAlways"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.loading ? View.GONE : View.VISIBLE}">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/clEventShows"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tvDescription"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.description}"
                            android:layout_marginEnd="20dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <TextView
                            android:id="@+id/tvShows"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/shows"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:visibility="@{viewModel.loading ? View.INVISIBLE : View.VISIBLE}"
                            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                            app:layout_constraintStart_toStartOf="@+id/tvDescription"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvShows"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvShows"
                            tools:listitem="@layout/layout_person_item"/>

                        <TextView
                            android:id="@+id/tvNoShows"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/no_shows"
                            android:textSize="16sp"
                            android:visibility="@{viewModel.hasShows ? View.GONE : View.VISIBLE}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvShows"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_add"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>